[workspace]
default-members = ["connectorx"]
members = ["connectorx", "connectorx-cpp"]
resolver = "2"

[profile.release]
debug = true
lto = true

[workspace.dependencies]
arrow = { version = "54", features = ["prettyprint", "ffi"] }
polars = { version = "0.45", features = ["dtype-u8", "dtype-u16", "lazy"] }
polars-arrow = { version = "0.45" }


[patch.crates-io]
mysql_common = { git = "https://github.com/congphuong/rust_mysql_common.git", rev = "b3fa6f676a9e8a9ef95dabd4f19ad222eebd166a" }
